# Auth_sprint_1

./: .gitignore  Dockerfile  Makefile  Readme.md  auth_database.ddl  docker-compose.yml  local-docker-compose.yml  pyproject.toml  ruff.toml  test-docker-compose.yml
.github/workflows/: actions.yml  hadolint.yml  tests.yml  wemake-python-styleguide.yml
src/: .example.env  TestDockerfile
src/alembic/versions/: 06efd4901911_.py  0da4e49bec16_create_user_refresh_token_table.py  0ecb8e4f73de_создание_auth_таблиц.py  14aa61542735_initial.py  317d5f994600_correction_of_pr_comments.py  3c6e3f56dbf4_remove_unique_constrain_from_user_agent_.py  91f1b8dbcffc_init_migrations.py  b9fa23f030b7_correction_of_pr_comments.py  c444648b7c20_initial_migration.py  cb9dda281d95_initial.py  e968b6c83b5d_remove_user_salt_column.py
src/app/: main.py
src/app/api/: deps.py
src/app/commands/: createsuperuser.py
src/app/common/: constance.py
src/app/db/: postgresql.py
src/app/models/: __init__.py  base.py  index.py  models.py  refresh_token.py  role.py  session.py  user.py  user_refresh_token.py  user_role.py
src/app/repositories/: __init__.py  base.py  refresh_token.py  role.py  session.py  user.py  user_role.py
src/app/repository/: base.py  role.py  session.py  user.py
src/app/services/: auth_service.py  postgres_service.py  role_service.py  roles_service.py  user_service.py
src/app/settings/: api.py  base.py  crypt_context.py  jwt.py  postgresql.py
src/app/tests/: conftest.py  fixtures.py  (+2 more)
src/common/: unit_of_work.py
src/requirements/: dev.txt  main.txt
(+22 files in other folders)
